plugins/binding/rust/source/TellusimRSBase.rs


extern "C" {
	fn tsBoundBoxd_set_bbf(ret: *mut BoundBoxd, b: *const BoundBoxf) -> *mut BoundBoxd;
	fn tsBoundBoxd_set_bs(ret: *mut BoundBoxd, s: *const BoundSphered) -> *mut BoundBoxd;
	fn tsBoundBoxd_expand1(ret: *mut BoundBoxd, v: *const Vector3d) -> *mut BoundBoxd;
	fn tsBoundBoxd_expand(ret: *mut BoundBoxd, b: *const BoundBoxd) -> *mut BoundBoxd;
	fn tsBoundBoxd_inside1(bb: *const BoundBoxd, v: *const Vector3d) -> bool;
	fn tsBoundBoxd_inside(bb: *const BoundBoxd, b: *const BoundBoxd) -> bool;
	fn tsBoundBoxd_distance(bb: *const BoundBoxd, v: *const Vector3d) -> f64;
}

/*****************************************************************************\
 *
 * BoundSphere
 *
\*****************************************************************************/

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct BoundSpheref {
	pub center: Vector3f,
	pub radius: f32,
}

impl BoundSpheref {
	
	pub fn new(center: &Vector3f, radius: f32) -> BoundSpheref {
		BoundSpheref { center: *center, radius: radius }
	}
	pub fn new_bsd(bs: &BoundSphered) -> BoundSpheref {
		let mut ret = BoundSpheref::default();
		unsafe { tsBoundSpheref_set_bsd(&mut ret, bs); }
		ret
	}
	pub fn new_bb(bb: &BoundBoxf) -> BoundSpheref {
		let mut ret = BoundSpheref::default();
		unsafe { tsBoundSpheref_set_bb(&mut ret, bb); }
		ret
	}
	
	pub fn expand_v(&mut self, v: &Vector3f) {
		unsafe { tsBoundSpheref_expand1(self, v); }
	}
	pub fn expand(&mut self, bs: &BoundSpheref) {
		unsafe { tsBoundSpheref_expand(self, bs); }
	}
	
	pub fn expand_radius_v(&mut self, v: &Vector3f) {
		unsafe { tsBoundSpheref_expandRadius1(self, v); }
	}
	pub fn expand_radius(&mut self, bs: &BoundSpheref) {
		unsafe { tsBoundSpheref_expandRadius(self, bs); }
	}
	
	pub fn inside_v(&self, v: &Vector3f) -> bool {
		unsafe { tsBoundSpheref_inside1(self, v) }
	}
	pub fn inside(&self, bs: &BoundSpheref) -> bool {
		unsafe { tsBoundSpheref_inside(self, bs) }
	}
	
	pub fn distance(&self, v: &Vector3f) -> f32 {
		unsafe { tsBoundSpheref_distance(self, v) }
	}
}

impl fmt::Display for BoundSpheref {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "{0} : {1}", self.center, self.radius)
	}
}

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct BoundSphered {
	pub center: Vector3d,
	pub radius: f64,
}

impl BoundSphered {
	
	pub fn new(center: &Vector3d, radius: f64) -> BoundSphered {
		BoundSphered { center: *center, radius: radius }
	}
	pub fn new_bsf(bs: &BoundSpheref) -> BoundSphered {
		let mut ret = BoundSphered::default();
		unsafe { tsBoundSphered_set_bsf(&mut ret, bs); }
		ret
	}
	pub fn new_bb(bb: &BoundBoxd) -> BoundSphered {
		let mut ret = BoundSphered::default();
		unsafe { tsBoundSphered_set_bb(&mut ret, bb); }
		ret
	}
	
	pub fn expand_v(&mut self, v: &Vector3d) {
		unsafe { tsBoundSphered_expand1(self, v); }
	}
	pub fn expand(&mut self, bs: &BoundSphered) {
		unsafe { tsBoundSphered_expand(self, bs); }
	}
	
	pub fn expand_radius_v(&mut self, v: &Vector3d) {
		unsafe { tsBoundSphered_expandRadius1(self, v); }
	}
	pub fn expand_radius(&mut self, bs: &BoundSphered) {
		unsafe { tsBoundSphered_expandRadius(self, bs); }
	}
	
	pub fn inside_v(&self, v: &Vector3d) -> bool {
		unsafe { tsBoundSphered_inside1(self, v) }
	}
	pub fn inside(&self, bs: &BoundSphered) -> bool {
		unsafe { tsBoundSphered_inside(self, bs) }
	}
	
	pub fn distance(&self, v: &Vector3d) -> f64 {
		unsafe { tsBoundSphered_distance(self, v) }
	}
}

impl fmt::Display for BoundSphered {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "{0} : {1}", self.center, self.radius)
	}
}

/*
 */
extern "C" {
	fn tsBoundSpheref_set_bsd(ret: *mut BoundSpheref, s: *const BoundSphered) -> *mut BoundSpheref;
	fn tsBoundSpheref_set_bb(ret: *mut BoundSpheref, b: *const BoundBoxf) -> *mut BoundSpheref;
	fn tsBoundSpheref_expand1(ret: *mut BoundSpheref, v: *const Vector3f) -> *mut BoundSpheref;
	fn tsBoundSpheref_expand(ret: *mut BoundSpheref, s: *const BoundSpheref) -> *mut BoundSpheref;
	fn tsBoundSpheref_expandRadius1(ret: *mut BoundSpheref, v: *const Vector3f) -> *mut BoundSpheref;
	fn tsBoundSpheref_expandRadius(ret: *mut BoundSpheref, s: *const BoundSpheref) -> *mut BoundSpheref;
	fn tsBoundSpheref_inside1(bs: *const BoundSpheref, v: *const Vector3f) -> bool;
	fn tsBoundSpheref_inside(bs: *const BoundSpheref, s: *const BoundSpheref) -> bool;
	fn tsBoundSpheref_distance(bs: *const BoundSpheref, v: *const Vector3f) -> f32;
}

extern "C" {
	fn tsBoundSphered_set_bsf(ret: *mut BoundSphered, s: *const BoundSpheref) -> *mut BoundSphered;
	fn tsBoundSphered_set_bb(ret: *mut BoundSphered, b: *const BoundBoxd) -> *mut BoundSphered;
	fn tsBoundSphered_expand1(ret: *mut BoundSphered, v: *const Vector3d) -> *mut BoundSphered;
	fn tsBoundSphered_expand(ret: *mut BoundSphered, s: *const BoundSphered) -> *mut BoundSphered;
	fn tsBoundSphered_expandRadius1(ret: *mut BoundSphered, v: *const Vector3d) -> *mut BoundSphered;
	fn tsBoundSphered_expandRadius(ret: *mut BoundSphered, s: *const BoundSphered) -> *mut BoundSphered;
	fn tsBoundSphered_inside1(bs: *const BoundSphered, v: *const Vector3d) -> bool;
	fn tsBoundSphered_inside(bs: *const BoundSphered, s: *const BoundSphered) -> bool;
	fn tsBoundSphered_distance(bs: *const BoundSphered, v: *const Vector3d) -> f64;
}

/*****************************************************************************\
 *
 * BoundFrustum
 *
\*****************************************************************************/

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct BoundFrustumf {
	pub projection: Matrix4x4f,
	pub modelview: Matrix4x4f,
	pub camera: Vector3f,
	pub plane_l: Vector4f,
	pub plane_r: Vector4f,
	pub plane_b: Vector4f,
	pub plane_t: Vector4f,
	pub plane_n: Vector4f,
	pub plane_f: Vector4f,
	pub sign_l: u32,
	pub sign_r: u32,
	pub sign_b: u32,
	pub sign_t: u32,
	pub sign_n: u32,
	pub sign_f: u32,
}

impl BoundFrustumf {
	
	pub fn new(p: &Matrix4x4f, m: &Matrix4x4f, c: &Vector3f, l: &Vector4f, r: &Vector4f, b: &Vector4f, t: &Vector4f, n: &Vector4f, f: &Vector4f) -> BoundFrustumf {
		BoundFrustumf { projection: *p, modelview: *m, camera: *c, plane_l: *l, plane_r: *r, plane_b: *b, plane_t: *t, plane_n: *n, plane_f: *f, sign_l: 0, sign_r: 0, sign_b: 0, sign_t: 0, sign_n: 0, sign_f: 0 }
	}
	pub fn new_bfd(bf: &BoundFrustumd) -> BoundFrustumf {
		let mut ret = BoundFrustumf::default();
		unsafe { tsBoundFrustumf_set_bfd(&mut ret, bf); }
		ret
	}
	pub fn new_pm(projection: &Matrix4x4f, modelview: &Matrix4x4f) -> BoundFrustumf {
		let mut ret = BoundFrustumf::default();
		unsafe { tsBoundFrustumf_set(&mut ret, projection, modelview, 1.0); }
		ret
	}
	pub fn new_pma(projection: &Matrix4x4f, modelview: &Matrix4x4f, aspect: f32) -> BoundFrustumf {
		let mut ret = BoundFrustumf::default();
		unsafe { tsBoundFrustumf_set(&mut ret, projection, modelview, aspect); }
		ret
	}
	
	pub fn inside_bb(&self, bb: &BoundBoxf) -> bool {
		unsafe { tsBoundFrustumf_inside_bb(self, bb) }
	}
	pub fn inside_bs(&self, bs: &BoundSpheref) -> bool {
		unsafe { tsBoundFrustumf_inside_bs(self, bs) }
	}
}

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct BoundFrustumd {
	pub projection: Matrix4x4d,
	pub modelview: Matrix4x4d,
	pub camera: Vector3d,
	pub plane_l: Vector4d,
	pub plane_r: Vector4d,
	pub plane_b: Vector4d,
	pub plane_t: Vector4d,
	pub plane_n: Vector4d,
	pub plane_f: Vector4d,
	pub sign_l: u32,
	pub sign_r: u32,
	pub sign_b: u32,
	pub sign_t: u32,
	pub sign_n: u32,
	pub sign_f: u32,
}

impl BoundFrustumd {
	
	pub fn new(p: &Matrix4x4d, m: &Matrix4x4d, c: &Vector3d, l: &Vector4d, r: &Vector4d, b: &Vector4d, t: &Vector4d, n: &Vector4d, f: &Vector4d) -> BoundFrustumd {
		BoundFrustumd { projection: *p, modelview: *m, camera: *c, plane_l: *l, plane_r: *r, plane_b: *b, plane_t: *t, plane_n: *n, plane_f: *f, sign_l: 0, sign_r: 0, sign_b: 0, sign_t: 0, sign_n: 0, sign_f: 0 }
	}
	pub fn new_bff(bf: &BoundFrustumf) -> BoundFrustumd {
		let mut ret = BoundFrustumd::default();
		unsafe { tsBoundFrustumd_set_bff(&mut ret, bf); }
		ret
	}
	pub fn new_pm(projection: &Matrix4x4d, modelview: &Matrix4x4d) -> BoundFrustumd {
		let mut ret = BoundFrustumd::default();
		unsafe { tsBoundFrustumd_set(&mut ret, projection, modelview, 1.0); }
		ret
	}
	pub fn new_pma(projection: &Matrix4x4d, modelview: &Matrix4x4d, aspect: f64) -> BoundFrustumd {
		let mut ret = BoundFrustumd::default();
		unsafe { tsBoundFrustumd_set(&mut ret, projection, modelview, aspect); }
		ret
	}
	
	pub fn inside_bb(&self, bb: &BoundBoxd) -> bool {
		unsafe { tsBoundFrustumd_inside_bb(self, bb) }
	}
	pub fn inside_bs(&self, bs: &BoundSphered) -> bool {
		unsafe { tsBoundFrustumd_inside_bs(self, bs) }
	}
}

/*
 */
extern "C" {
	fn tsBoundFrustumf_set_bfd(ret: *mut BoundFrustumf, bf: *const BoundFrustumd) -> *mut BoundFrustumf;
	fn tsBoundFrustumf_set(ret: *mut BoundFrustumf, projection: *const Matrix4x4f, modelview: *const Matrix4x4f, aspect: f32) -> *mut BoundFrustumf;
	fn tsBoundFrustumf_inside_bb(bf: *const BoundFrustumf, bb: *const BoundBoxf) -> bool;
	fn tsBoundFrustumf_inside_bs(bf: *const BoundFrustumf, bs: *const BoundSpheref) -> bool;
}

extern "C" {
	fn tsBoundFrustumd_set_bff(ret: *mut BoundFrustumd, bf: *const BoundFrustumf) -> *mut BoundFrustumd;
	fn tsBoundFrustumd_set(ret: *mut BoundFrustumd, projection: *const Matrix4x4d, modelview: *const Matrix4x4d, aspect: f64) -> *mut BoundFrustumd;
	fn tsBoundFrustumd_inside_bb(bf: *const BoundFrustumd, bb: *const BoundBoxd) -> bool;
	fn tsBoundFrustumd_inside_bs(bf: *const BoundFrustumd, bs: *const BoundSphered) -> bool;
}

/*****************************************************************************\
 *
 * Platform
 *
\*****************************************************************************/

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct Origin {
	pub x: u32,
	pub y: u32,
	pub z: u32,
}

impl Origin {
	pub fn new_2(x: u32, y: u32) -> Origin {
		Origin { x: x, y: y, z: 0 }
	}
	pub fn new_3(x: u32, y: u32, z: u32) -> Origin {
		Origin { x: x, y: y, z: z }
	}
}

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct Size {
	pub width: u32,
	pub height: u32,
	pub depth: u32,
}

impl Size {
	pub fn new_2(width: u32, height: u32) -> Size {
		Size { width: width, height: height, depth: 1 }
	}
	pub fn new_3(width: u32, height: u32, depth: u32) -> Size {
		Size { width: width, height: height, depth: depth }
	}
}

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct Region {
	pub x: u32,
	pub y: u32,
	pub z: u32,
	pub width: u32,
	pub height: u32,
	pub depth: u32,
}

impl Region {
	pub fn new_2(x: u32, y: u32, width: u32, height: u32) -> Region {
		Region { x: x, y: y, z: 0, width: width, height: height, depth: 1 }
	}
	pub fn new_3(x: u32, y: u32, z: u32, width: u32, height: u32, depth: u32) -> Region {
		Region { x: x, y: y, z: z, width: width, height: height, depth: depth }
	}
}

/*
 */
#[derive(Copy, Clone)]
pub struct Face {
	pub base: u32,
	pub size: u32,
}

impl Default for Face {
	fn default() -> Face {
		Face { base: 0, size: 1 }
	}
}

impl Face {
	pub fn new(base: u32, size: u32) -> Face {
		Face { base: base, size: size }
	}
}

/*
 */
#[derive(Copy, Clone)]
pub struct Layer {
	pub base: u32,
	pub size: u32,
}

impl Default for Layer {
	fn default() -> Layer {
		Layer { base: 0, size: 1 }
	}
}

impl Layer {
	pub fn new(base: u32, size: u32) -> Layer {
		Layer { base: base, size: size }
	}
}

/*
 */
#[derive(Copy, Clone)]
pub struct Mipmap {
	pub base: u32,
	pub size: u32,
}

impl Default for Mipmap {
	fn default() -> Mipmap {
		Mipmap { base: 0, size: 1 }
	}
}

impl Mipmap {
	pub fn new(base: u32, size: u32) -> Mipmap {
		Mipmap { base: base, size: size }
	}
}

/*
 */
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Slice {
	pub face: u32,
	pub faces: u32,
	pub layer: u32,
	pub layers: u32,
	pub mipmap: u32,
	pub mipmaps: u32,
}

impl Default for Slice {
	fn default() -> Slice {
		Slice { face: 0, faces: 1, layer: 0, layers: 1, mipmap: 0, mipmaps: 1 }
	}
}
